--- a/api/pom.xml
+++ b/api/pom.xml
@@ -99,6 +99,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>jar/manage-api</finalName>
 		<plugins>
 
 		<!--	 <plugin>
@@ -125,8 +126,8 @@
                         <version>1.3.2</version>
                     </dependency>
                 </dependencies>
-            </plugin>
--->
+
+            </plugin>-->
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
